--- a/group_vars/windows.yml
+++ b/group_vars/windows.yml
@@ -1,8 +1,8 @@
-ansible_ssh_user: Administrator
-ansible_ssh_pass: p4ssw0rd
-ansible_ssh_port: 5986
-ansible_python_interpreter: c:\\tools\\python2\\python.exe
+ansible_user: administrator
+ansible_password: Sneakypies33!
+ansible_port: 5986
 ansible_connection: winrm
-ansible_winrm_scheme: https
-windows_sa_user: sa
-windows_sa_pass: p4assw0rd
+# The following is necessary for Python 2.7.9+ when using default WinRM self-signed certificates:
+ansible_winrm_server_cert_validation: ignore
+windows_vmtools_file: "VMware-tools-10.1.15-6677369-x86_64.exe"
+windows_vmtools_url: "https://packages.vmware.com/tools/esx/6.5latest/windows/x64/VMware-tools-10.1.15-6677369-x86_64.exe"
