--- a/roles/windows/tasks/first.yml
+++ b/roles/windows/tasks/first.yml
@@ -5,9 +5,14 @@
   - name: rename machine using powershell
     script: ../files/machineServername.ps1 "{{ machineName }}"
 
+  - win_updates:
+      category_names:
+      - SecurityUpdates
+      - CriticalUpdates
+      - UpdateRollups
+
   - name: debug var ansible_ssh_host
     debug: msg="var 'ansible_ssh_host' = '{{ ansible_ssh_host }}'"
 
   - name: reboot machine only
     raw: shutdown /r /t 0
-
