--- a/roles/windows/tasks/second.yml
+++ b/roles/windows/tasks/second.yml
@@ -1,10 +1,11 @@
-  - name: join domain
-    script: ../files/domainJoin.ps1 "{{ vsphere_login }}" "{{ vsphere_password }}" "{{ project_name }}"
-    no_log: True
+  - win_domain_membership:
+      dns_domain_name: fd.local
+      hostname: "{{ machineName }}"
+      domain_admin_user: administrator@fd.local
+      domain_admin_password: Sneakypies33
+      domain_ou_path: "OU=Servers,DC=fd,DC=local"
+      state: domain
+    register: domain_state
 
-  - name: deploy GetSetExplorerSettings.ps1 script...
-    win_copy: src=../files/GetSetExplorerSettings.ps1 dest=c:/GetSetExplorerSettings.ps1
-
-  - name: reboot machine again
-    raw: shutdown /r /t 0
-
+  - win_reboot:
+    when: domain_state.reboot_required
